added floats and box model to project

--- a/pig-dice.html
+++ b/pig-dice.html
@@ -9,8 +9,13 @@
     <title>pig dice</title>
   </head>
   <body>
+    <img src="https://metrouk2.files.wordpress.com/2014/09/peppa.jpg?quality=80&strip=all&zoom=1&resize=644%2C402" alt="How greedy are you">
     <div class="container">
-    <h1 class="jumbotron">PIG DICE</h1>
+      <div class="name">
+        <h1 >PIG GAME</h1>
+        <h6>😱Your PIGGISHNESS will cost you😱</h6>
+        <a href="index2.html"><button>How to play</button></a>
+      </div>
       <div class="row">
         <div class="col-md-4">
           <h2>Player 1</h2>
@@ -22,12 +27,12 @@
           <div id="player2" class="player">0</div>
           <h3 id="score2">Score:</h3>
         </div>
-        <a href="index2"></a>
-
+        <div class="col-xs-4">
         </div>
+      </div>
       <div name=buttons>
-      <button type="submit" class="btn btn-warning" name="button" id="roll">Roll</button>
-      <button type="submit" class="btn btn-success" name="button" id="hold">Hold</button>
+      <button type="submit" class="btn " name="button" id="roll">Roll</button>
+      <button type="submit" class="btn " name="button" id="hold">Hold</button>
       </div>
       </div>
     </div>
