--- a/pig-dice.html
+++ b/pig-dice.html
@@ -3,8 +3,11 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title>pig dice</title>
   </head>
@@ -17,19 +20,31 @@
         <a href="index2.html"><button>How to play</button></a>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h2>Player 1</h2>
-          <div id="player1" class="player">0</div>
-          <h3 id="score1">Score:</h3>
+          <form id="players-name">
+          <div class="input-group form-group">
+              <input type="text" name="players-name" id="playersName1" class="form-control" placeholder="Enter name">
+              <span class="input-group-btn">
+              </span>
+          </form>
+        <div id="Interim1" class="player">0</div>
+
+        <h3 id="score">Score:</h3>
         </div>
-        <div class="col-md-4">
+        </div>
+        <div class="col-md-6">
           <h2>Player 2</h2>
-          <div id="player2" class="player">0</div>
-          <h3 id="score2">Score:</h3>
-        </div>
-        <div class="col-xs-4">
+          <form id="players-name">
+          <div class="input-group form-group">
+              <input type="text" name="players-name" id="playersName2" class="form-control" placeholder="Enter name">
+              <span class="input-group-btn">
+              </span>
+        <div id="Interim2" class="player">0</div>
+          <h3 id="score">Score:</h3>
         </div>
       </div>
+      <button type="submit" class="btn btn-danger" name="button" id="start-button">Start</button>
       <div name=buttons>
       <button type="submit" class="btn " name="button" id="roll">Roll</button>
       <button type="submit" class="btn " name="button" id="hold">Hold</button>
